install UI MCP for future works

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "npm run test --workspaces"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "shadcn": "^3.5.0"
   },
   "engines": {
     "node": ">=18.0.0",
