--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
