--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@hrc-kitchen/common": "*",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
