--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.7.1",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
     "stripe": "^14.14.0",
