--- a/frontend-common/package.json
+++ b/frontend-common/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Shared components, types, and utilities for HRC Kitchen frontend applications",
   "private": true,
+  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
