fix redirection problem at production environment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,14 +8,12 @@ DATABASE_URL="postgresql://username:password@localhost:5432/hrc_kitchen?schema=p
 
 # JWT Authentication
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=24h
+JWT_EXPIRES_IN=7d
 
 # Email Configuration (SendGrid or SMTP)
-EMAIL_FROM=noreply@hrc-kitchen.com
-EMAIL_HOST=smtp.sendgrid.net
-EMAIL_PORT=587
-EMAIL_USER=apikey
-EMAIL_PASSWORD=your-sendgrid-api-key
+# Get your API key from: https://app.sendgrid.com/settings/api_keys
+SENDGRID_API_KEY=replace-with-sendgrid-api-key
+EMAIL_FROM=cy_test1@huonregionalcare.com.au
 
 # Stripe Payment
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
@@ -26,7 +24,7 @@ STRIPE_CURRENCY=aud
 CORS_ORIGIN=http://localhost:5173
 
 # Application URLs
-FRONTEND_URL=http://localhost:5173
+#FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3000
 
 # Phase 6: Application Separation
@@ -45,6 +43,13 @@ BCRYPT_ROUNDS=10
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Ordering Configuration
-DEFAULT_ORDER_WINDOW_START=08:00
-DEFAULT_ORDER_WINDOW_END=10:30
+# Cloudinary Image Upload
+CLOUDINARY_CLOUD_NAME=replace-with-cloud-name
+CLOUDINARY_API_KEY=replace-with-cloudinary-api-key
+CLOUDINARY_API_SECRET=replace-with-cloudinary-api-secret
+
+# required for guest token signing; can reuse JWT secret but better to set explicitly
+GUEST_ORDER_TOKEN_SECRET=replace-with-guest-token-secret
+
+# required for CAPTCHA verification (matching your Google reCAPTCHA v3/v2 keys)
+RECAPTCHA_SECRET_KEY=replace-with-recaptcha-secret
