migration to gcloud recaptcha api enterprise

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,5 +51,11 @@ CLOUDINARY_API_SECRET=replace-with-cloudinary-api-secret
 # required for guest token signing; can reuse JWT secret but better to set explicitly
 GUEST_ORDER_TOKEN_SECRET=replace-with-guest-token-secret
 
-# required for CAPTCHA verification (matching your Google reCAPTCHA v3/v2 keys)
-RECAPTCHA_SECRET_KEY=replace-with-recaptcha-secret
+# reCAPTCHA Enterprise configuration
+RECAPTCHA_PROJECT_ID=your-gcp-project-id
+RECAPTCHA_SITE_KEY=your-enterprise-site-key
+# optional: adjust if you want stricter/looser bot filtering (0.0 - 1.0)
+RECAPTCHA_MIN_SCORE=0.3
+
+# Deprecated (legacy v2/v3)
+# RECAPTCHA_SECRET_KEY=replace-with-recaptcha-secret
