--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
     "stripe": "^14.14.0",
+    "@google-cloud/recaptcha-enterprise": "^6.3.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
